[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-keyup"
dynamic = ["version"]
description = "Passwordless SSH setup for Raspberry Pi, NVIDIA Jetson, or any Linux device"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.8"
authors = [{name = "UAB Kurokesu"}]
keywords = ["ssh", "ssh-keys", "ssh-config", "ssh-copy-id", "passwordless-ssh", "raspberry-pi", "rpi", "jetson", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
ssh-keyup = "ssh_keyup:main"

[project.urls]
Repository = "https://github.com/Kurokesu/ssh-keyup"

[tool.setuptools.dynamic]
version = {attr = "ssh_keyup.__version__"}
